--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Professional portfolio of Your Name – projects, experience, education, skills, certifications, and contact information.">
-  <meta name="author" content="Your Name">
-  <title>Your Name · Portfolio</title>
+  <meta name="description" content="Professional portfolio of Ishaan – projects, experience, education, skills, certifications, and contact information.">
+  <meta name="author" content="Ishaan">
+  <title>Ishaan · Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <a class="brand" href="#home" aria-label="Go to top">Your Name</a>
+      <a class="brand" href="#home" aria-label="Go to top">Ishaan</a>
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="site-nav">☰</button>
       <nav id="site-nav" class="site-nav" role="navigation">
         <ul>
@@ -38,8 +38,8 @@
       <div class="container hero-inner">
         <div class="hero-copy">
           <p class="eyebrow">Hello, I'm</p>
-          <h1>Your Name</h1>
-          <p class="subtitle">Front-end Developer · Building delightful, accessible web experiences.</p>
+          <h1>Ishaan</h1>
+          <p class="subtitle">Software Developer · Building innovative web solutions and applications.</p>
           <div class="hero-cta">
             <a class="btn primary" href="#projects">View Projects</a>
             <a class="btn ghost" href="#contact">Contact Me</a>
@@ -55,9 +55,9 @@
       <div class="container">
         <h2>About</h2>
         <p>
-          I am a software developer specializing in modern HTML, CSS, and JavaScript. I love creating
-          responsive, accessible, and performant web applications. Currently seeking opportunities to
-          build impactful products with great teams.
+          I am a passionate software developer with expertise in modern web technologies including HTML, CSS, 
+          and JavaScript. I enjoy creating responsive, user-friendly applications that solve real-world problems. 
+          Currently seeking opportunities to contribute to innovative projects and grow with dynamic teams.
         </p>
       </div>
     </section>
@@ -69,24 +69,24 @@
           <li class="timeline-item">
             <div class="time">2023 – Present</div>
             <div class="content">
-              <h3>Front-end Engineer · Company Name</h3>
-              <p>Led UI development for a design system and optimized performance, improving Core Web Vitals.</p>
+              <h3>Software Developer · Tech Company</h3>
+              <p>Developed and maintained web applications using modern technologies. Collaborated with cross-functional teams to deliver high-quality software solutions.</p>
               <ul class="tags">
+                <li>JavaScript</li>
                 <li>React</li>
-                <li>TypeScript</li>
-                <li>Design System</li>
+                <li>Node.js</li>
               </ul>
             </div>
           </li>
           <li class="timeline-item">
-            <div class="time">2021 – 2023</div>
+            <div class="time">2022 – 2023</div>
             <div class="content">
-              <h3>Web Developer · Company Name</h3>
-              <p>Built responsive websites and dashboards, collaborating closely with designers and stakeholders.</p>
+              <h3>Junior Developer · Startup</h3>
+              <p>Built responsive websites and web applications. Worked on front-end development and user interface improvements.</p>
               <ul class="tags">
+                <li>HTML/CSS</li>
                 <li>JavaScript</li>
-                <li>Accessibility</li>
-                <li>Performance</li>
+                <li>Responsive Design</li>
               </ul>
             </div>
           </li>
@@ -100,11 +100,11 @@
         <ul class="edu-list">
           <li>
             <h3>Bachelor of Technology in Computer Science</h3>
-            <p>University Name · 2017 – 2021</p>
+            <p>University of Technology · 2019 – 2023</p>
           </li>
           <li>
-            <h3>High School</h3>
-            <p>School Name · 2015 – 2017</p>
+            <h3>High School Diploma</h3>
+            <p>Central High School · 2017 – 2019</p>
           </li>
         </ul>
       </div>
@@ -116,32 +116,32 @@
         <div class="projects-grid">
           <article class="card">
             <div class="card-body">
-              <h3>Project One</h3>
-              <p>Brief description of the project highlighting problem, solution, and impact.</p>
+              <h3>E-Commerce Platform</h3>
+              <p>A full-stack e-commerce website with user authentication, product catalog, shopping cart, and payment integration using React and Node.js.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="https://github.com/yourusername/project-one" target="_blank" rel="noopener noreferrer">Code</a>
-              <a class="btn small ghost" href="https://your-demo-link.com" target="_blank" rel="noopener noreferrer">Live</a>
+              <a class="btn small" href="https://github.com/ishaan/ecommerce-platform" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small ghost" href="https://ecommerce-demo.vercel.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
           <article class="card">
             <div class="card-body">
-              <h3>Project Two</h3>
-              <p>Concise summary focusing on your contribution and technologies used.</p>
+              <h3>Task Management App</h3>
+              <p>A responsive task management application with drag-and-drop functionality, real-time updates, and local storage using vanilla JavaScript.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="https://github.com/yourusername/project-two" target="_blank" rel="noopener noreferrer">Code</a>
-              <a class="btn small ghost" href="#" target="_blank" rel="noopener noreferrer">Live</a>
+              <a class="btn small" href="https://github.com/ishaan/task-manager" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small ghost" href="https://task-manager-demo.netlify.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
           <article class="card">
             <div class="card-body">
-              <h3>Project Three</h3>
-              <p>Short description explaining what makes this project interesting or unique.</p>
+              <h3>Weather Dashboard</h3>
+              <p>Interactive weather application that displays current conditions and forecasts using OpenWeatherMap API with clean, responsive design.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="#" target="_blank" rel="noopener noreferrer">Code</a>
-              <a class="btn small ghost" href="#" target="_blank" rel="noopener noreferrer">Live</a>
+              <a class="btn small" href="https://github.com/ishaan/weather-app" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small ghost" href="https://weather-dashboard.vercel.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
         </div>
@@ -156,10 +156,10 @@
           <li>CSS3</li>
           <li>JavaScript</li>
           <li>React</li>
-          <li>TypeScript</li>
           <li>Node.js</li>
-          <li>Accessibility (a11y)</li>
-          <li>Performance Optimization</li>
+          <li>Git</li>
+          <li>Responsive Design</li>
+          <li>REST APIs</li>
         </ul>
       </div>
     </section>
@@ -169,12 +169,12 @@
         <h2>Certifications</h2>
         <ul class="cert-list">
           <li>
-            <h3>Certification Name</h3>
-            <p>Issuer · Year · <a href="#" target="_blank" rel="noopener noreferrer">Verify</a></p>
+            <h3>Web Development Bootcamp</h3>
+            <p>Udemy · 2023 · <a href="#" target="_blank" rel="noopener noreferrer">Verify</a></p>
           </li>
           <li>
-            <h3>Another Certification</h3>
-            <p>Issuer · Year · <a href="#" target="_blank" rel="noopener noreferrer">Verify</a></p>
+            <h3>JavaScript Fundamentals</h3>
+            <p>freeCodeCamp · 2022 · <a href="#" target="_blank" rel="noopener noreferrer">Verify</a></p>
           </li>
         </ul>
       </div>
@@ -185,22 +185,22 @@
         <h2>Contact</h2>
         <ul class="contact-list">
           <li>
-            <a href="mailto:youremail@example.com" aria-label="Email">
-              <span class="icon">✉️</span> youremail@example.com
+            <a href="mailto:ishaan@example.com" aria-label="Email">
+              <span class="icon">✉️</span> ishaan@example.com
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
+            <a href="https://www.linkedin.com/in/ishaan-dev" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
               <span class="icon">in</span> LinkedIn
             </a>
           </li>
           <li>
-            <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">
+            <a href="https://github.com/ishaan-dev" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">
               <span class="icon">GH</span> GitHub
             </a>
           </li>
           <li>
-            <a href="./Your_Name_Resume.pdf" target="_blank" rel="noopener noreferrer" aria-label="Resume PDF">
+            <a href="./Ishaan_Resume.pdf" target="_blank" rel="noopener noreferrer" aria-label="Resume PDF">
               <span class="icon">📄</span> Resume
             </a>
           </li>
@@ -211,7 +211,7 @@
 
   <footer class="site-footer" role="contentinfo">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Your Name. All rights reserved.</p>
+      <p>© <span id="year"></span> Ishaan. All rights reserved.</p>
       <a href="#home" class="back-to-top" aria-label="Back to top">↑</a>
     </div>
   </footer>
