changes in index file

--- a/My-portfolio/index.html
+++ b/My-portfolio/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Professional portfolio of Ishaan – projects, experience, education, skills, certifications, and contact information.">
-  <meta name="author" content="Ishaan">
-  <title>Ishaan · Portfolio</title>
+  <meta name="description" content="Professional portfolio of Ishaan Rastogi – projects, experience, education, skills, certifications, and contact information.">
+  <meta name="author" content="Ishaan Rastogi">
+  <title>Ishaan Rastogi · Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
   <header class="site-header" role="banner">
     <div class="container header-inner">
-      <a class="brand" href="#home" aria-label="Go to top">Ishaan</a>
+      <a class="brand" href="#home" aria-label="Go to top">Ishaan Rastogi</a>
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="site-nav">☰</button>
       <nav id="site-nav" class="site-nav" role="navigation">
         <ul>
@@ -38,7 +38,7 @@
       <div class="container hero-inner">
         <div class="hero-copy">
           <p class="eyebrow">Hello, I'm</p>
-          <h1>Ishaan</h1>
+          <h1>Ishaan Rastogi</h1>
           <p class="subtitle">Software Developer · Building innovative web solutions and applications.</p>
           <div class="hero-cta">
             <a class="btn primary" href="#projects">View Projects</a>
@@ -99,12 +99,19 @@
         <h2>Education</h2>
         <ul class="edu-list">
           <li>
-            <h3>Bachelor of Technology in Computer Science</h3>
-            <p>University of Technology · 2019 – 2023</p>
+            <h3>Bachelor of Technology in Applied Petroleum Engineering with Specialization in Upstream</h3>
+            <p>University of Petroleum and Energy Studies · 2020 – 2024</p>
+            <p class="grade">CGPA: 8.2/10</p>
           </li>
           <li>
-            <h3>High School Diploma</h3>
-            <p>Central High School · 2017 – 2019</p>
+            <h3>Class 12th</h3>
+            <p>City Montessori School · 2019 – 2020</p>
+            <p class="grade">Percentage: 85%</p>
+          </li>
+          <li>
+            <h3>Class 10th</h3>
+            <p>City Montessori School · 2017 – 2018</p>
+            <p class="grade">Percentage: 88%</p>
           </li>
         </ul>
       </div>
@@ -120,7 +127,7 @@
               <p>A full-stack e-commerce website with user authentication, product catalog, shopping cart, and payment integration using React and Node.js.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="https://github.com/ishaan/ecommerce-platform" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small" href="https://github.com/ishaan-rastogi/ecommerce-platform" target="_blank" rel="noopener noreferrer">Code</a>
               <a class="btn small ghost" href="https://ecommerce-demo.vercel.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
@@ -130,7 +137,7 @@
               <p>A responsive task management application with drag-and-drop functionality, real-time updates, and local storage using vanilla JavaScript.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="https://github.com/ishaan/task-manager" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small" href="https://github.com/ishaan-rastogi/task-manager" target="_blank" rel="noopener noreferrer">Code</a>
               <a class="btn small ghost" href="https://task-manager-demo.netlify.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
@@ -140,7 +147,7 @@
               <p>Interactive weather application that displays current conditions and forecasts using OpenWeatherMap API with clean, responsive design.</p>
             </div>
             <div class="card-actions">
-              <a class="btn small" href="https://github.com/ishaan/weather-app" target="_blank" rel="noopener noreferrer">Code</a>
+              <a class="btn small" href="https://github.com/ishaan-rastogi/weather-app" target="_blank" rel="noopener noreferrer">Code</a>
               <a class="btn small ghost" href="https://weather-dashboard.vercel.app" target="_blank" rel="noopener noreferrer">Live</a>
             </div>
           </article>
@@ -185,22 +192,22 @@
         <h2>Contact</h2>
         <ul class="contact-list">
           <li>
-            <a href="mailto:ishaan@example.com" aria-label="Email">
-              <span class="icon">✉️</span> ishaan@example.com
+            <a href="mailto:ishaan.rastogi@example.com" aria-label="Email">
+              <span class="icon">✉️</span> ishaan.rastogi@example.com
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/ishaan-dev" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
+            <a href="https://www.linkedin.com/in/ishaan-rastogi" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">
               <span class="icon">in</span> LinkedIn
             </a>
           </li>
           <li>
-            <a href="https://github.com/ishaan-dev" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">
+            <a href="https://github.com/ishaan-rastogi" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">
               <span class="icon">GH</span> GitHub
             </a>
           </li>
           <li>
-            <a href="./Ishaan_Resume.pdf" target="_blank" rel="noopener noreferrer" aria-label="Resume PDF">
+            <a href="./Ishaan_Rastogi_Resume.pdf" target="_blank" rel="noopener noreferrer" aria-label="Resume PDF">
               <span class="icon">📄</span> Resume
             </a>
           </li>
@@ -211,7 +218,7 @@
 
   <footer class="site-footer" role="contentinfo">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Ishaan. All rights reserved.</p>
+      <p>© <span id="year"></span> Ishaan Rastogi. All rights reserved.</p>
       <a href="#home" class="back-to-top" aria-label="Back to top">↑</a>
     </div>
   </footer>
